# primeiro-scrap

./: README.md  main.py  pyproject.toml  scrap.ipynb  wiki.html
